INFRA-13654 Add report to determine what concepts a set of users have modified on a set of projects