@@ -6,16 +6,14 @@ import org.ihtsdo.otf.rest.client.terminologyserver.pojo.Component.ComponentType
 import org.ihtsdo.otf.rest.client.terminologyserver.pojo.UnknownComponent;
 import org.ihtsdo.otf.utils.StringUtils;
 import org.ihtsdo.termserver.scripting.ReportClass;
+import org.ihtsdo.termserver.scripting.TermServerScript;
 import org.ihtsdo.termserver.scripting.service.TraceabilityService;
 import org.ihtsdo.termserver.scripting.service.MultiDetailTraceabilityService;
 import org.snomed.otf.scheduler.domain.*;
 import org.snomed.otf.scheduler.domain.Job.ProductionStatus;
 import org.snomed.otf.script.dao.ReportSheetManager;
 
-import java.io.IOException;
 import java.util.*;
-import java.util.stream.Collectors;
-
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -24,29 +22,33 @@ public class ComponentTraceability extends TermServerReport implements ReportCla
 
 	private static final Logger LOGGER = LoggerFactory.getLogger(ComponentTraceability.class);
 
-	public static String COMPONENT_IDS = "Component Ids";
-	TraceabilityService traceabilityService;
-	List<String> componentIds;
+	static {
+		ReportSheetManager.targetFolderId = "1F-KrAwXrXbKj5r-HBLM0qI5hTzv-JgnU"; //Ad-hoc
+	}
+
+	public static final String COMPONENT_IDS = "Component Ids";
+	private TraceabilityService traceabilityService;
+	private List<String> componentIds;
 	
-	public static void main(String[] args) throws TermServerScriptException, IOException {
+	public static void main(String[] args) throws TermServerScriptException {
 		Map<String, String> params = new HashMap<>();
 		params.put(COMPONENT_IDS,
 				"663114025,663113020,734078021,776663023");
-		TermServerReport.run(ComponentTraceability.class, args, params);
+		TermServerScript.run(ComponentTraceability.class, args, params);
 	}
-	
+
+	@Override
 	public void init (JobRun run) throws TermServerScriptException {
-		ReportSheetManager.targetFolderId = "1F-KrAwXrXbKj5r-HBLM0qI5hTzv-JgnU"; //Ad-hoc
-		
 		if (!StringUtils.isEmpty(run.getParamValue(COMPONENT_IDS))) {
 			componentIds = Arrays.stream(run.getMandatoryParamValue(COMPONENT_IDS).split(",",-1))
-					.map(s -> s.trim())
-					.collect(Collectors.toList());
+					.map(String::trim)
+					.toList();
 		}
 		
 		super.init(run);
 	}
-	
+
+	@Override
 	public void postInit() throws TermServerScriptException {
 		String[] tabNames = new String[] {
 				"Component Traceability",
@@ -59,7 +61,6 @@ public class ComponentTraceability extends TermServerReport implements ReportCla
 		traceabilityService = new MultiDetailTraceabilityService(jobRun, this);
 		//Do not set a search path because we want to know about all activity, not just
 		//that which has been promoted.
-		//traceabilityService.setBranchPath(project.getKey());
 	}
 	
 	@Override
@@ -76,7 +77,8 @@ public class ComponentTraceability extends TermServerReport implements ReportCla
 				.withTag(INT)
 				.build();
 	}
-	
+
+	@Override
 	public void runJob() throws TermServerScriptException {
 		if (componentIds == null || componentIds.isEmpty()) {
 			throw new TermServerScriptException("Please specify component ids for which traceability should be reported.");
